--- a/html_Files/RoutePredictionGraph.html
+++ b/html_Files/RoutePredictionGraph.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Flight Status Prediction Dashboard</title>
-  <link rel="stylesheet" href="RouteSelectionPage.css">
+  <link rel="stylesheet" href="/css_Files/RouteSelectionPage.css">
   <script src="https://cdn.plot.ly/plotly-3.0.1.min.js"></script>
 </head>
 <body>
