--- a/data_analysis.html
+++ b/data_analysis.html
@@ -16796,6 +16796,47 @@ Name: Flights, dtype: int64</pre>
 
 </div>
 
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Which airlines is the least delayed on this route this month?</span>
+<span class="c1"># This data will be displayed on webpage according to user selection</span>
+<span class="c1"># On Time value shows the count when the arrival delay &lt; 15 minutes</span>
+<span class="k">def</span> <span class="nf">write_to_file</span><span class="p">(</span><span class="n">filename</span><span class="p">,</span> <span class="n">data</span><span class="p">):</span>
+    <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;monthly_summary/</span><span class="si">{</span><span class="n">filename</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">,</span> <span class="s2">&quot;w&quot;</span><span class="p">)</span> <span class="k">as</span> <span class="n">f</span><span class="p">:</span>
+        <span class="n">f</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="n">data</span><span class="o">.</span><span class="n">to_json</span><span class="p">())</span>
+
+
+<span class="n">airports</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;SFO&quot;</span><span class="p">,</span> <span class="s2">&quot;LAX&quot;</span><span class="p">,</span> <span class="s2">&quot;LAS&quot;</span><span class="p">,</span> <span class="s2">&quot;ORD&quot;</span><span class="p">,</span> <span class="s2">&quot;LGA&quot;</span><span class="p">]</span>
+
+<span class="k">for</span> <span class="n">org_airport</span> <span class="ow">in</span> <span class="n">airports</span><span class="p">:</span>
+    <span class="k">for</span> <span class="n">dest_airport</span> <span class="ow">in</span> <span class="n">airports</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">org_airport</span> <span class="o">==</span> <span class="n">dest_airport</span><span class="p">:</span>
+            <span class="k">continue</span>
+        <span class="k">for</span> <span class="n">month</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span><span class="mi">13</span><span class="p">):</span>
+            <span class="n">df_filt</span> <span class="o">=</span> <span class="p">((</span><span class="n">df_all</span><span class="p">[</span><span class="s2">&quot;Origin&quot;</span><span class="p">]</span> <span class="o">==</span> <span class="n">org_airport</span><span class="p">)</span> <span class="o">&amp;</span> <span class="p">(</span><span class="n">df_all</span><span class="p">[</span><span class="s2">&quot;Dest&quot;</span><span class="p">]</span> <span class="o">==</span> <span class="n">dest_airport</span><span class="p">)</span> <span class="o">&amp;</span> <span class="p">(</span><span class="n">df_all</span><span class="p">[</span><span class="s2">&quot;Month&quot;</span><span class="p">]</span> <span class="o">==</span> <span class="n">month</span><span class="p">))</span>
+            <span class="n">df_month</span> <span class="o">=</span> <span class="n">df_all</span><span class="p">[</span><span class="n">df_filt</span><span class="p">]</span>
+            <span class="n">summary</span> <span class="o">=</span> <span class="n">df_month</span><span class="o">.</span><span class="n">groupby</span><span class="p">(</span><span class="s2">&quot;Airline&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">agg</span><span class="p">(</span>
+                <span class="n">Total_Flight</span> <span class="o">=</span> <span class="p">(</span><span class="s2">&quot;Flights&quot;</span><span class="p">,</span> <span class="s2">&quot;count&quot;</span><span class="p">),</span>
+                <span class="n">Average_Dep_Delay</span> <span class="o">=</span> <span class="p">(</span><span class="s2">&quot;DepDelayMinutes&quot;</span><span class="p">,</span> <span class="s2">&quot;mean&quot;</span><span class="p">),</span>
+                <span class="n">Average_Arr_Delay</span> <span class="o">=</span> <span class="p">(</span><span class="s2">&quot;ArrDelayMinutes&quot;</span><span class="p">,</span> <span class="s2">&quot;mean&quot;</span><span class="p">),</span>
+                <span class="n">On_Time_Percentage</span><span class="o">=</span><span class="p">(</span><span class="s2">&quot;ArrDelayMinutes&quot;</span><span class="p">,</span> <span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="p">((</span><span class="n">x</span> <span class="o">&lt;</span> <span class="mi">15</span><span class="p">)</span><span class="o">.</span><span class="n">mean</span><span class="p">()</span> <span class="o">*</span> <span class="mi">100</span><span class="p">)</span><span class="o">.</span><span class="n">astype</span><span class="p">(</span><span class="nb">int</span><span class="p">)))</span>
+            <span class="n">summary</span><span class="p">[</span><span class="s2">&quot;Average_Dep_Delay&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">summary</span><span class="p">[</span><span class="s2">&quot;Average_Dep_Delay&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">round</span><span class="p">(</span><span class="mi">2</span><span class="p">)</span>
+            <span class="n">summary</span><span class="p">[</span><span class="s2">&quot;Average_Arr_Delay&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="n">summary</span><span class="p">[</span><span class="s2">&quot;Average_Arr_Delay&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">round</span><span class="p">(</span><span class="mi">2</span><span class="p">)</span>
+            <span class="n">top_five</span> <span class="o">=</span> <span class="n">summary</span><span class="o">.</span><span class="n">sort_values</span><span class="p">(</span><span class="n">by</span><span class="o">=</span><span class="s2">&quot;Average_Arr_Delay&quot;</span><span class="p">)</span><span class="o">.</span><span class="n">head</span><span class="p">(</span><span class="mi">5</span><span class="p">)</span><span class="o">.</span><span class="n">reset_index</span><span class="p">()</span>
+            <span class="n">write_to_file</span><span class="p">(</span><span class="n">org_airport</span><span class="o">+</span><span class="s2">&quot;_&quot;</span><span class="o">+</span><span class="n">dest_airport</span><span class="o">+</span><span class="s2">&quot;_&quot;</span><span class="o">+</span><span class="nb">str</span><span class="p">(</span><span class="n">month</span><span class="p">)</span><span class="o">+</span><span class="s2">&quot;_top5_airlines.json&quot;</span><span class="p">,</span> <span class="n">top_five</span><span class="p">)</span>
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
 </div>
 </body>
 
